// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square Square  should be rendered 1`] = `
<div
  className="squares"
  onClick={[MockFunction]}
>
  <span>
     
     
  </span>
</div>
`;

exports[`Square Square  should be rendered with O 1`] = `
<div
  className="squares O"
  onClick={[MockFunction]}
>
  <span>
     
    O
     
  </span>
</div>
`;
